src/style.css
@font-face {
  font-family: 'Spongebob';
  src: url('./assets/fonts/Some\ Time\ Later.otf');
}
@font-face {
  font-family: 'Mels';
  src: url('./assets/fonts/Mels-Regular.otf');
  font-style: normal;
}
@font-face {
  font-family: 'Mels';
  src: url('./assets/fonts/Mels-Italic.otf');
  font-style: italic;
}

*, *::before, *::after {
  box-sizing: border-box;
}

:root {
  --blue:rgb(0, 162, 255);
  --black:rgb(6, 6, 65);
  --white:rgb(215, 239, 255);
  --rgb-black:6, 6, 65;
  --rgb-blue:0, 162, 255;
  --rgb-white:215, 239, 255;
  --red: rgb(160, 48, 48);
  --green: rgb(69, 131, 69);
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width:100vw;
  height:100vh;
  font-family: Mels;
  background-color: var(--blue);
  color:var(--black);
}

header {
  display: flex;
  justify-content: space-between;
  padding:20px;
  align-items: center; 
  background: var(--blue);
  background: linear-gradient(357deg, rgba(0,162,255,1) 0%, rgb(125, 209, 240) 100%); 
  width: min(1000px, 100%);
}

header h1 {
  font-size: 2.5rem;
  font-family: Spongebob;
  color: rgb(255, 255, 0);
  text-shadow: 3px 3px 3px var(--black);
}

.characters {
  display: flex;
  /* flex-wrap: wrap; */
  gap:20px;
  padding: 10px;
  /* border:solid 1px; */
}
.characters figure {
  text-align: center;
  font-size: .8rem;
}
.character {
  height:81px;
  transition: .2s;
  filter: drop-shadow(2px 2px rgba(var(--rgb-black), .5));
}
.character:hover {
  transform: scale(150%);
}

.timer {
  display: flex;
  font-family: Spongebob;
  font-size: 1.5rem;
  border: solid 1px;
  padding: 5px;
  text-align: center;
}
.timer span {
  display: inline-block;
  width:2.5ch;
}

main {
  flex:auto;
  width: 100%;
  position: relative;
  /* TEST */
  /* cursor: none; */
}

main img {
  /* height:auto; */
  /* border: solid red; */
  display: block;
  object-fit: contain;
}

.bubble {
  width:100px;
  height:100px;
  border: solid 3px rgba(var(--rgb-white), .8);
  border-radius: 50%;
  position: absolute;
  top:0;
  left:0;
  background-color: rgba(255, 255, 255, .15);
}

.bubble .shine {
  position: absolute;
  border-radius: 50%;
  transform: rotate(320deg);
  /* background-color: red; */
}

.shine:first-child {
  width:20px;
  height:40px;
  bottom:15px;
  left:20px;
  box-shadow: -10px 2px white;
}

.shine:last-child {
  width:10px;
  height:25px;
  top:15px;
  right:20px;
  box-shadow: 10px 2px white;
}

.popup-bg {
  position: fixed;
  top:0;
  left:0;
  width: 100vw;
  height:100vh;
}

.popup-container {
  position:absolute;
  display: none;
}

.popup {
  border: solid 3px var(--white);
  overflow: hidden;
  border-radius: 5px;
  padding: 0;
  backdrop-filter: blur(5px);
}

.popup li {
  list-style: none;
  padding: 10px;
  background-color: rgba(var(--rgb-white), .8);
  cursor: pointer;
  transition: .2s;
}

.popup li:not(:last-child) {
  border-bottom: solid 1px rgba(var(--rgb-black),.2);
}

.popup li.cancel {
  color:rgba(var(--rgb-black), .5);
  font-size:.8rem;
}

.popup li:hover, .popup li[data-active="true"] {
  background-color: var(--white);
}

.toast {
  position: fixed;
  bottom: -50px;
  padding: 10px;
  border-radius: 5px;
  color: white;
  max-width: 30ch;
  text-align: center;
  box-shadow: 2px 2px 3px rgba(var(--rgb-black),.5);
  transition: .2s;
}
.toast.show {
  bottom: 10px;
}
.toast.red {
  background-color: var(--red);
}
.toast.green {
  background-color: var(--green);
}

footer {
  width: min(1000px, 100%);
}

